<?xml version="1.0"?>
<package format="2">
  <name>abb_control</name>
  <version>0.0.0</version>
  <description>ROS package for joint angle control of two ABB IRB120 robots with Python</description>
  <maintainer email="hdinkel2@illinois.edu">Holly Dinkel</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/RMDLO/abb_dual_arm</url>
  <author email="hdinkel2@illinois.edu">Holly Dinkel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_core</build_depend>
  <build_depend>moveit_ros_planning_interface</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>abb_irb120_moveit_config</build_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>moveit_core</build_export_depend>
  <build_export_depend>moveit_ros_planning_interface</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <build_export_depend>abb_irb120_moveit_config</build_export_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>moveit_core</exec_depend>
  <exec_depend>moveit_ros_planning_interface</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>abb_irb120_moveit_config</exec_depend>


</package>
